themes/HumHub/css/theme.css
/* ... */
@media only screen and (max-width : 768px) {
  :root {
    --hh-fixed-header-height: 105px;
  }
  #layout-content .left-navigation .list-group {
    -webkit-overflow-scrolling: auto;
    white-space: nowrap;
    overflow-x: auto;
  }
  #layout-content .left-navigation .list-group::-webkit-scrollbar {
    -webkit-appearance: none;
  }
  #layout-content .left-navigation .list-group::-webkit-scrollbar:vertical {
    width: 8px;
  }
  #layout-content .left-navigation .list-group::-webkit-scrollbar:horizontal {
    height: 8px;
  }
  #layout-content .left-navigation .list-group::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    border: 2px solid #ffffff;
  }
  #layout-content .left-navigation .list-group::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
  }
  #layout-content .table-responsive::-webkit-scrollbar {
    -webkit-appearance: none;
  }
  #layout-content .table-responsive::-webkit-scrollbar:vertical {
    width: 8px;
  }
  #layout-content .table-responsive::-webkit-scrollbar:horizontal {
    height: 8px;
  }
  #layout-content .table-responsive::-webkit-scrollbar-thumb {
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    border: 2px solid #ffffff;
  }
  #layout-content .table-responsive::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #ffffff;
  }
  #layout-content .panel {
    margin-bottom: 5px;
  }
  #layout-content .panel .statistics .entry {
    margin-left: 10px;
  }
  #layout-content > .container {
    padding-right: 2px !important;
    padding-left: 2px !important;
  }
  #layout-content > .container .row {
    margin-right: -2px !important;
    margin-left: -2px !important;
  }
  #layout-content > .container .col-xs-1,
  #layout-content > .container .col-sm-1,
  #layout-content > .container .col-md-1,
  #layout-content > .container .col-lg-1,
  #layout-content > .container .col-xs-2,
  #layout-content > .container .col-sm-2,
  #layout-content > .container .col-md-2,
  #layout-content > .container .col-lg-2,
  #layout-content > .container .col-xs-3,
  #layout-content > .container .col-sm-3,
  #layout-content > .container .col-md-3,
  #layout-content > .container .col-lg-3,
  #layout-content > .container .col-xs-4,
  #layout-content > .container .col-sm-4,
  #layout-content > .container .col-md-4,
  #layout-content > .container .col-lg-4,
  #layout-content > .container .col-xs-5,
  #layout-content > .container .col-sm-5,
  #layout-content > .container .col-md-5,
  #layout-content > .container .col-lg-5,
  #layout-content > .container .col-xs-6,
  #layout-content > .container .col-sm-6,
  #layout-content > .container .col-md-6,
  #layout-content > .container .col-lg-6,
  #layout-content > .container .col-xs-7,
  #layout-content > .container .col-sm-7,
  #layout-content > .container .col-md-7,
  #layout-content > .container .col-lg-7,
  #layout-content > .container .col-xs-8,
  #layout-content > .container .col-sm-8,
  #layout-content > .container .col-md-8,
  #layout-content > .container .col-lg-8,
  #layout-content > .container .col-xs-9,
  #layout-content > .container .col-sm-9,
  #layout-content > .container .col-md-9,
  #layout-content > .container .col-lg-9,
  #layout-content > .container .col-xs-10,
  #layout-content > .container .col-sm-10,
  #layout-content > .container .col-md-10,
  #layout-content > .container .col-lg-10,
  #layout-content > .container .col-xs-11,
  #layout-content > .container .col-sm-11,
  #layout-content > .container .col-md-11,
  #layout-content > .container .col-lg-11,
  #layout-content > .container .col-xs-12,
  #layout-content > .container .col-sm-12,
  #layout-content > .container .col-md-12,
  #layout-content > .container .col-lg-12 {
    padding-right: 2px !important;
    padding-left: 2px !important;
  }
  #layout-content .layout-nav-container .panel-heading {
    display: none;
  }
  #layout-content .panel-profile-header #profilefileupload,
  #layout-content .panel-profile-header .profile-user-photo-container,
  #layout-content .panel-profile-header .space-acronym {
    height: 100px !important;
    width: 100px !important;
  }
  #layout-content .panel-profile-header .profile-user-photo {
    height: 95px !important;
    width: 95px !important;
  }
  #layout-content .image-upload-container .image-upload-buttons {
    right: 2px !important;
  }
  #layout-content .panel-profile .panel-profile-header .img-profile-header-background {
    min-height: 80px !important;
  }
  #layout-content .panel-profile .panel-profile-header .img-profile-data {
    padding-top: 50px !important;
    padding-left: 125px;
  }
  .modal-dialog {
    width: calc(100vw - 4px) !important;
    padding: 0 !important;
    margin: 2px !important;
  }
  .dropdown-menu > li a,
  .nav-pills .dropdown-menu li a,
  .nav-tabs .dropdown-menu li a,
  .account .dropdown-menu li a,
  .modal .dropdown-menu li a,
  .panel .dropdown-menu li a,
  .nav-tabs .dropdown-menu li a {
    padding-top: 10px;
    padding-bottom: 10px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
  .dropdown-menu {
    max-width: 320px;
  }
  select.form-control:not([multiple]) {
    padding-right: 23px;
    width: auto;
  }
  .modal.in {
    padding-right: 0 !important;
  }
  .load-suppressed {
    margin-top: -8px;
    margin-bottom: 5px;
  }
  .ProsemirrorEditor .ProseMirror-menuitem {
    font-size: 1.2em !important;
  }
}
.icon-sm,
.fa-sm {
  font-size: 0.875em;
}
.icon-lg,
.fa-lg {
  font-size: 1.33333em;
  line-height: 0.75em;
  vertical-align: -0.0667em;
}
.icon-2x,
.fa-2x {
  font-size: 2em;
}
.icon-3x,
.fa-3x {
  font-size: 3em;
}
.icon-4x,
.fa-4x {
  font-size: 4em;
}
.icon-5x,
.fa-5x {
  font-size: 5em;
}
.icon-6x,
.fa-6x {
  font-size: 6em;
}
.icon-7x,
.fa-7x {
  font-size: 7em;
}
.icon-9x,
.fa-9x {
  font-size: 9em;
}
.icon-10x,
.fa-10x {
  font-size: 10em;
}
/* ... */

